@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-03-30T01:22:24Z",
+  "timestamp" : "2022-03-30T16:23:01Z",
   "count" : 0,
   "count_minmax" : [ 0, 0 ],
   "count_prev_day_inc" : 0,
-  "count_prev_day_dec" : 2,
+  "count_prev_day_dec" : 5,
   "uniques" : 0,
   "uniques_minmax" : [ 0, 0 ],
   "uniques_prev_day_inc" : 0,
-  "uniques_prev_day_dec" : 1
+  "uniques_prev_day_dec" : 3
 }
