@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-03-30T01:22:24Z",
+  "timestamp" : "2022-03-30T16:23:01Z",
   "count_outdated" : 481,
   "uniques_outdated" : 256,
-  "count" : 1730,
-  "uniques" : 314,
+  "count" : 1727,
+  "uniques" : 312,
   "clones" : [
     {
       "timestamp": "2022-03-16T00:00:00Z",
-      "count": 551,
+      "count": 548,
       "count_minmax": [ 2, 553 ],
-      "uniques": 8,
+      "uniques": 6,
       "uniques_minmax": [ 1, 9 ]
     },
     {
