@@ -1,11 +1,11 @@
 {
-  "count": 1249,
-  "uniques": 33,
+  "count": 1246,
+  "uniques": 32,
   "clones": [
     {
       "timestamp": "2022-03-16T00:00:00Z",
-      "count": 551,
-      "uniques": 8
+      "count": 548,
+      "uniques": 6
     },
     {
       "timestamp": "2022-03-18T00:00:00Z",
